Fixed z-index issue, renamed classes
Needed an extra div layer in the end.

--- a/material/overrides/homecss.css
+++ b/material/overrides/homecss.css
@@ -3,6 +3,40 @@
 	--monospace: 'Space Mono', 'Courier New', Monospace;
 }
 
+
+
+body{
+	margin:unset;
+}
+
+/* Hero page */
+
+.hero-content{
+	position:relative;
+	width: 100%;
+	height:100vh;
+	display:flex;
+	justify-content: center;
+	align-items: center;
+	margin:0;
+}
+
+.hero-bg{
+	background-image: url(landing_bg.png);
+	background-size:cover;
+	background-attachment: fixed;
+	z-index: -1;
+}
+
+.right-margin-align{
+	position:relative;
+	left: 50vh;
+	float:right;
+	margin-right:5%	;
+	z-index:1 !important;
+	pointer-events: auto;
+}
+
 h1.logo{
 	font-family: var(--monospace);
 	font-size: 4.5rem;
@@ -10,37 +44,7 @@ h1.logo{
 	margin: auto;
 }
 
-/* Landing stuff */
-
-.static-background{
-	position:fixed;
-	top:0;
-	left: 0;
-	width: 100%;
-	height:100vh;
-	background-image: url(landing_bg.png);
-	background-size:cover;
-	background-attachment: fixed;
-	z-index: -1;
-}
-
 /* CTAs etc */
-
-.right-margin-align{
-	position:relative;
-	top:20vh;
-	float:right;
-	margin-right:5%	;
-	user-select: text !important;
-}
-
-.above-me{
-	z-index: 2;
-}
-
-.below-me{
-	z-index:1;
-}
 
 .ctas{
 	display:flex;
@@ -59,21 +63,19 @@ button.cta{
 	font-size:1.4rem;
 	box-shadow: 000;
 	transition-duration: 0.3s;
+	z-index:3;
+	cursor:pointer;
 
 }
-button.cta :hover{
-	background-color:var(--scorch);
-	color:white;
+button:hover{
+	background-color:red !important;
+	
 }
 
 /* next section */
 
-.scroll-content {
-    padding-top: 90vh; /* Start content after the background */
-}
-
-.section{
-	background-color: white;
-	padding:50px;
-	margin:20px 0;
-}
+.main-content {
+	padding: 40px;
+	background-color: #f9f9f9;
+	
+  }
